Updated simulation text

--- a/experiment/simulation/index.html
+++ b/experiment/simulation/index.html
@@ -6,6 +6,7 @@
 </head>
 <body>
 		<!-- Your code goes here-->
+	<p> Make a simulation of virtual reality application. </p>
 
 	<!-- Add JS at the bottom of HTML file --> 
         <script src="./js/main.js"></script>
